Added LeNet-5 model. Enhanced DAGMM training.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 /wandb
 /outputs
-/__pycache__
-
-/attacks/__pycache__
-
-/detections/__pycache__
-
-/dagmm/__pycache__
+__pycache__
 /dagmm/dagmm_train_data
 *.pt
 
