--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,11 @@ serverapp = "server_app:app"
 clientapp = "client_app:app"
 
 [tool.flwr.app.config]
-num-server-rounds = 20
+num-server-rounds = 10
 fraction-fit = 1.0
 fraction-evaluate = 0.0
 local-epochs = 1
-server-device = "cpu"
+server-device = "cuda"
 use-wandb = false
 
 [tool.poetry.dependencies.flwr]
