Improved Viveroy implementation to be much more efficient. Now stopping an experiment if only 1 client is left because the framework cannot handle it.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ serverapp = "server_app:app"
 clientapp = "client_app:app"
 
 [tool.flwr.app.config]
-num-server-rounds = 40
+num-server-rounds = 20
 fraction-fit = 1.0
 fraction-evaluate = 0.0
 local-epochs = 1
@@ -44,10 +44,10 @@ extras = [ "vision",]
 version = "^0.5.0"
 
 [tool.flwr.federations.local-sim.options]
-num-supernodes = 100
+num-supernodes = 10
 
 [tool.flwr.federations.local-sim-gpu.options]
-num-supernodes = 100
+num-supernodes = 10
 
 [tool.hatch.build.targets.wheel]
 packages = [ ".",]
@@ -58,4 +58,4 @@ num-gpus = 0.0
 
 [tool.flwr.federations.local-sim-gpu.options.backend.client-resources]
 num-cpus = 1
-num-gpus = 0.041666666666666664
+num-gpus = 0.1
